--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>Hi</h1>
-    <p>This is <strong>Sanjay</strong></p>
+    <p>This is <strong>Sanjay</strong> website</p>
   </body>
 </html>
